Preventing the images from stretch in height

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -270,7 +270,6 @@ body {
 				@media @desktop {
 					width: 250px;
 					margin-left: 10px;
-					bottom: 20px;
 					border-top: 3px solid @mostaza;
 					background-color: white;
 				}
